renamed get to downloader

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -6,9 +6,12 @@ AllCops:
 Style/StringLiterals:
   EnforcedStyle: double_quotes
 
-# Set Line Length to 100
+# Specifies soft and hard limits.
 Layout/LineLength:
-  Max: 110
+  Severity: info
+  Details: 80 soft, 120 hard
+  Max: 80 # Why isn't there a way to specify the soft limit
+  IgnoredPatterns: ['^\s*#.+'] # Ignore comments, but try to keep them under 80 
 
 # Allow empty line before rescue
 Layout/EmptyLinesAroundExceptionHandlingKeywords:
