--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -22,6 +22,10 @@ Layout/EmptyLinesAroundExceptionHandlingKeywords:
 Style/AsciiComments:
   Enabled: false
 
+# Move MethodLength to 20
+Metrics/MethodLength:
+  Max: 20
+
 # Complain?
 Gemspec/DateAssignment: # (new in 1.10)
   Enabled: true
