--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -135,3 +135,30 @@ Style/StringChars: # (new in 1.12)
 Style/SwapValues: # (new in 1.1)
   Enabled: true
 
+Lint/AmbiguousOperatorPrecedence: # new in 1.21
+  Enabled: true
+
+Lint/AmbiguousRange: # new in 1.19
+  Enabled: true
+
+Lint/IncompatibleIoSelectWithFiberScheduler: # new in 1.21
+  Enabled: true
+
+Lint/RequireRelativeSelfPath: # new in 1.22
+  Enabled: true
+
+Security/IoMethods: # new in 1.22
+  Enabled: true
+
+Style/NumberedParameters: # new in 1.22
+  Enabled: true
+
+Style/NumberedParametersLimit: # new in 1.22
+  Enabled: true
+
+Style/RedundantSelfAssignmentBranch: # new in 1.19
+  Enabled: true
+
+Style/SelectByRegexp: # new in 1.22
+  Enabled: true
+
